[package]
name = "atlas-persistent-log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

serialize_serde = ["serde", "bincode"]
serialize_capnp = []

[dependencies]
atlas-capnp = { path = "../atlas-capnp" }
atlas-common = { path = "../atlas-common" }
atlas-execution = { path = "../atlas-smr-application" }
atlas-core = { path = "../atlas-core" }
atlas-communication = { path = "../atlas-communication" }
atlas-metrics = { path = "../atlas-metrics" }

bincode = { version = "2.0.0-rc.3", features = ["serde"], optional = true }

serde = { version = "1.0", optional = true }
capnp = "0.16.1"

log = "0.4.17"